Homework 3.4 или какой-то там )))